# rquota

./: .gitignore  .travis.yml  ChangeLog  DISCLAIMER  META  Make-rpm.mk  Makefile  Makefile.am  Makefile.in  Makefile.nolustre  NEWS  README  README.MOVED  README.md  bootstrap  configure  configure.ac  getconf.c  getconf.h  getquota.c  getquota.h  getquota_lustre.c  getquota_nfs.c  getquota_private.h  list.h  quota.1  quota.c  quota.conf.5  quota.conf.example  quota.spec  quota.spec.in  quota.x  quota_lustre.c  quota_nfs.c  repquota.1  repquota.c  rquota.spec  rquota.spec.in  util.c  util.h
config/: ac_lustre.m4  ac_tirpc.m4  aclocal.m4  config.h.in
etc/: Makefile.am  Makefile.in  quota.conf
htdocs/: index.html  q.dia  sfcopy
man/: Makefile.am  Makefile.in  quota.1.in  quota.conf.5.in  repquota.1.in  repquota.8.in
scripts/: build-install-lustre.sh
src/: Makefile.am  Makefile.in  getconf.c  getconf.h  getquota.c  getquota.h  getquota_lustre.c  getquota_nfs.c  getquota_private.h  hostlist.c  hostlist.h  list.c  listint.c  listint.h  quota.1  quota.c  quota.conf.5  quota.conf.example  repquota.1  repquota.c  util.c  util.h
src/cmd/: Makefile.am  getquota.c  getquota.h  getquota_lustre.c  getquota_nfs.c  getquota_private.h  quota.c  repquota.c
src/liblsd/: Makefile.am
src/librpc/: Makefile.am  rquota_clnt_test.c  rquota_svc_test.c
src/libutil/: Makefile.am  getconf.c  listint.c  listint.h  util.c
test/: 00.sh  01  01.exp  01.sh  02  02.exp  02.sh  03  03.exp  03.sh  04  04.exp  04.sh  05  05.exp  05.sh  06  06.exp  06.sh  07  07.exp  07.sh  08  08.exp  08.sh  09  09.exp  09.sh  10  10.exp  10.sh  11  11.exp  11.sh  12.sh  13  13.exp  13.sh  14  14.exp  (+6 more)
